@@ -1,4 +1,4 @@
-# $NetBSD: buildlink3.mk,v 1.2 2004/10/03 00:13:09 tv Exp $
+# $NetBSD: buildlink3.mk,v 1.3 2004/10/25 09:05:27 xtraeme Exp $
 
 BUILDLINK_DEPTH:=		${BUILDLINK_DEPTH}+
 STREAMTUNER_BUILDLINK3_MK:=	${STREAMTUNER_BUILDLINK3_MK}+
@@ -11,8 +11,7 @@ BUILDLINK_PACKAGES:=	${BUILDLINK_PACKAGES:Nstreamtuner}
 BUILDLINK_PACKAGES+=	streamtuner
 
 .if !empty(STREAMTUNER_BUILDLINK3_MK:M+)
-BUILDLINK_DEPENDS.streamtuner+=		streamtuner>=0.12.1
-BUILDLINK_RECOMMENDED.streamtuner+=	streamtuner>=0.12.1nb1
+BUILDLINK_DEPENDS.streamtuner+=		streamtuner>=0.99
 BUILDLINK_PKGSRCDIR.streamtuner?=	../../audio/streamtuner
 .endif	# STREAMTUNER_BUILDLINK3_MK
 
