@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.6 2004/03/30 22:21:31 xtraeme Exp $
+$NetBSD: distinfo,v 1.7 2004/10/25 09:05:27 xtraeme Exp $
 
-SHA1 (streamtuner-0.12.1.tar.gz) = 17a891cfaee6b54313142b208ad6ab3d2fd3672b
-Size (streamtuner-0.12.1.tar.gz) = 664551 bytes
+SHA1 (streamtuner-0.99.tar.gz) = 6d6d0315a360783be9729b0f035bd38df27230d8
+Size (streamtuner-0.99.tar.gz) = 782084 bytes
