@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7555 2004/10/25 09:03:22 xtraeme Exp $
+$NetBSD: CHANGES,v 1.7556 2004/10/25 09:05:27 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4852,3 +4852,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ap-ssl to 2.8.21 [tron 2004-10-25]
 	Removed streamtuner-live365 [xtraeme 2004-10-25]
 	Removed streamtuner-local [xtraeme 2004-10-25]
+	Updated streamtuner to 0.99 [xtraeme 2004-10-25]
